<resources>
    <string name="app_name">Plantlets</string>

    <string name="welcome_msg">Welcome to Plantlets</string>


    <string name="enter_credentials">Enter your email and password to continue</string>
    <string name="customer_info">Customer Information</string>
    <string name="delivery_info">Delivery Information</string>
    <string name="payment_info">Payment Information</string>
    <string name="delivery_area_error">"Location is beyond the delivery area"</string>

    // Errors messages
    <string name="name_required_error">Name field cannot be empty</string>
    <string name="email_required_error">Email field cannot be empty</string>
    <string name="field_required_error">Field cannot be empty</string>
    <string name="password_required_error">Password field cannot be empty.</string>
    <string name="mobile_required_error">Mobile Number field cannot be empty</string>
    <string name="email_valid_error">"Provide a valid email address</string>
    <string name="address_required_error">Pin Location field cannot be empty.</string>
    <string name="upload_image">"Please Upload Image"</string>
    <string name="category_error">"Please Choose Category"</string>
    <string name="error">Error</string>
    <string name="title_activity_pin_location_map">PinLocationMapActivity</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="information">Information</string>
    <string name="account_created">Your account is successfully created </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="category">categories</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="add_category">Add Category</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="choose_category">Choose Category</string>
    <string name="add_item">Add Item</string>
    <string name="edit_store">Edit Store</string>
    <string name="eidt_item">Edit Item</string>
    <string name="find_perfect_plant">Find perfect plant</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="find_nurseries">Find Nurseries</string>
    <string name="item_details">Item Details</string>
    <string name="plant_detail_sample">
        A plant is a living organism that converts sunlight into energy through photosynthesis. It consists of roots, stems, leaves, and often flowers, and plays a vital role in oxygen production and environmental balance
    </string>
    <string name="cart_empty">Cart is Empty</string>
    <string name="checkout">Checkout</string>
    <string name="my_cart">My Cart</string>
    <string name="item_total">"Item Total : "</string>
    <string name="delivery">Delivery Charges</string>
    <string name="total">Total:</string>
    <string name="tax">Tax </string>
    <string name="full_name">Enter Full Name</string>
    <string name="email">Enter Email</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="address">Enter Full Address</string>
    <string name="zipcode">Enter Zipcode</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="credit_debit_card">Credit/Debit Card</string>
    <string name="pin_location">Select Pin Location</string>
    <string name="order_details">Order Details</string>
    <string name="order_summary">Order Summary</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="deliver">Deliver\n</string>


</resources>