<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:paddingTop="@dimen/margin_normal_100"
    android:paddingBottom="@dimen/margin_normal_150"
    android:paddingHorizontal="@dimen/margin_normal_100"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_dialog_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_category"
        android:fontFamily="@font/futura_medium"
        android:paddingVertical="@dimen/padding_normal_100"
        android:paddingHorizontal="@dimen/padding_normal_500"
        android:textSize="@dimen/font_small_150"
        android:textColor="@color/light_green"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvLabelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/font_small_125"
        android:fontFamily="@font/futura_medium"
        android:layout_marginTop="@dimen/margin_normal_100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_label" />

    <RelativeLayout
        android:id="@+id/rlName"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal_100"
        android:background="@drawable/shape_search_border"
        android:padding="@dimen/padding_small_150"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvLabelName"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelName">


        <EditText
            android:id="@+id/etCategoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:background="@null"
            android:hint="Enter Name"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/font_small_125"
            android:fontFamily="@font/futura_medium"
            android:paddingVertical="@dimen/padding_small_100"
            />


    </RelativeLayout>

    <TextView
        android:id="@+id/btnAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal_200"
        android:background="@drawable/shape_circle_green"
        android:fontFamily="@font/futur"
        android:text="@string/add"
        android:textSize="@dimen/font_small_125"
        android:textStyle="bold"
        app:backgroundTint="@null"
        android:elevation="2dp"
        android:paddingVertical="@dimen/padding_normal_100"
        app:layout_constraintWidth_percent="0.4"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlName"
        />



</androidx.constraintlayout.widget.ConstraintLayout>